--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>5.0.6.RELEASE</version>
+		</dependency>
+
 <dependency>
  <groupId>org.webjars</groupId>
  <artifactId>jquery</artifactId>
