--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>5.0.6.RELEASE</version>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.4.0-b180830.0359</version>
 		</dependency>
 
 <dependency>
